@@ -21,10 +21,11 @@ package org.apache.accumulo.test.shell;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.Files.newBufferedReader;
 import static java.util.Objects.requireNonNull;
+import static org.apache.accumulo.core.util.LazySingletons.RANDOM;
 import static org.apache.accumulo.harness.AccumuloITBase.MINI_CLUSTER_ONLY;
-import static org.apache.accumulo.harness.AccumuloITBase.SUNNY_DAY;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -32,7 +33,7 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
@@ -49,10 +50,14 @@ import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
 import org.apache.accumulo.core.client.TableNotFoundException;
+import org.apache.accumulo.core.data.TableId;
 import org.apache.accumulo.core.util.TextUtil;
 import org.apache.accumulo.harness.MiniClusterConfigurationCallback;
 import org.apache.accumulo.harness.SharedMiniClusterBase;
 import org.apache.accumulo.miniclusterImpl.MiniAccumuloConfigImpl;
+import org.apache.accumulo.server.conf.store.PropStore;
+import org.apache.accumulo.server.conf.store.TablePropKey;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.io.Text;
 import org.junit.jupiter.api.AfterAll;
@@ -63,7 +68,6 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 @Tag(MINI_CLUSTER_ONLY)
-@Tag(SUNNY_DAY)
 public class ShellCreateTableIT extends SharedMiniClusterBase {
 
   private MockShell ts;
@@ -72,7 +76,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     @Override
     public void configureMiniCluster(MiniAccumuloConfigImpl cfg, Configuration coreSite) {
       // Only one tserver to avoid race conditions on ZK propagation (auths and configuration)
-      cfg.setNumTservers(1);
+      cfg.getClusterServerConfiguration().setNumDefaultTabletServers(1);
       // Set the min span to 0 so we will definitely get all the traces back. See ACCUMULO-4365
       Map<String,String> siteConf = cfg.getSiteConfig();
       cfg.setSiteConfig(siteConf);
@@ -279,7 +283,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and un-encoded with no repeats or blank lines.
    */
   @Test
@@ -294,13 +298,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, unsorted and un-encoded with no repeats or blank lines.
    */
   @Test
@@ -315,13 +319,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with no repeats or blank lines.
    */
   @Test
@@ -336,13 +340,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and un-encoded with a blank line and no repeats.
    */
   @Test
@@ -357,13 +361,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and un-encoded with a blank line and no repeats.
    */
   @Test
@@ -378,13 +382,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, unsorted and un-encoded with a blank line and repeats.
    */
   @Test
@@ -399,13 +403,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with a blank line and repeats.
    */
   @Test
@@ -420,18 +424,17 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits file will be empty.
    */
   @Test
-  public void testCreateTableWithEmptySplitFile()
-      throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
+  public void testCreateTableWithEmptySplitFile() throws IOException {
     String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
       generateSplitsFile(splitsFile, 0, 0, false, false, false, false, false);
@@ -440,7 +443,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       assertThrows(TableNotFoundException.class,
           () -> client.tableOperations().listSplits(tableName));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -483,7 +486,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with no repeats or blank lines.
    */
   @Test
@@ -498,13 +501,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, unsorted and encoded with no repeats or blank lines.
    */
   @Test
@@ -519,13 +522,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with no repeats or blank lines.
    */
   @Test
@@ -540,13 +543,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with a blank line and no repeats.
    */
   @Test
@@ -561,13 +564,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with a blank line and no repeats.
    */
   @Test
@@ -582,13 +585,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, unsorted and encoded with a blank line and repeats.
    */
   @Test
@@ -603,13 +606,13 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
   /**
    * Use shell to create a table with a supplied file containing splits.
-   *
+   * <p>
    * The splits will be contained in a file, sorted and encoded with a blank line and repeats.
    */
   @Test
@@ -624,13 +627,72 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
+    }
+  }
+
+  // Verify that createtable handles initial TabletAvailability parameters.
+  // Argument should handle upper/lower/mixed case as value.
+  // If splits are supplied, each created tablet should contain the ~tab:availability value in
+  // the
+  // metadata table.
+  @Test
+  public void testCreateTableWithInitialTabletAvailability() throws Exception {
+    final String[] tables = getUniqueNames(5);
+
+    // createtable with no tablet availability argument supplied
+    String createCmd = "createtable " + tables[0];
+    verifyTableWithTabletAvailability(createCmd, tables[0], "ONDEMAND", 1);
+
+    // createtable with '-a' argument supplied
+    createCmd = "createtable " + tables[1] + " -a hosted";
+    verifyTableWithTabletAvailability(createCmd, tables[1], "HOSTED", 1);
+
+    // using --availability
+    createCmd = "createtable " + tables[2] + " --availability unHosted";
+    verifyTableWithTabletAvailability(createCmd, tables[2], "UNHOSTED", 1);
+
+    String splitsFile = System.getProperty("user.dir") + "/target/splitsFile";
+    Path splitFilePath = Path.of(splitsFile);
+    try {
+      generateSplitsFile(splitsFile, 10, 12, false, false, true, false, false);
+      createCmd = "createtable " + tables[3] + " -a Hosted -sf " + splitsFile;
+      verifyTableWithTabletAvailability(createCmd, tables[3], "HOSTED", 11);
+    } finally {
+      Files.delete(splitFilePath);
+    }
+
+    try {
+      generateSplitsFile(splitsFile, 5, 5, true, true, true, false, false);
+      createCmd = "createtable " + tables[4] + " -a unhosted -sf " + splitsFile;
+      verifyTableWithTabletAvailability(createCmd, tables[4], "UNHOSTED", 6);
+    } finally {
+      Files.delete(splitFilePath);
+    }
+  }
+
+  private void verifyTableWithTabletAvailability(String cmd, String tableName,
+      String tabletAvailability, int expectedTabletCnt) throws Exception {
+    ts.exec(cmd);
+    String tableId = getTableId(tableName);
+    String result = ts.exec(
+        "scan -t accumulo.metadata -b " + tableId + " -e " + tableId + "< -c ~tab:availability");
+    // the ~tab:availability entry should be created at table creation
+    assertTrue(result.contains("~tab:availability"));
+    // There should be a corresponding tablet availability value for each expected tablet
+    assertEquals(expectedTabletCnt, StringUtils.countMatches(result, tabletAvailability));
+  }
+
+  private String getTableId(String tableName) throws Exception {
+    try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
+      Map<String,String> idMap = client.tableOperations().tableIdMap();
+      return idMap.get(tableName);
     }
   }
 
   private SortedSet<Text> readSplitsFromFile(final String splitsFile) throws IOException {
     SortedSet<Text> splits = new TreeSet<>();
-    try (BufferedReader reader = newBufferedReader(Paths.get(splitsFile))) {
+    try (BufferedReader reader = newBufferedReader(Path.of(splitsFile))) {
       String split;
       while ((split = reader.readLine()) != null) {
         Text unencodedString = decode(split);
@@ -646,7 +708,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       final boolean binarySplits, final boolean encoded, final boolean sort,
       final boolean addBlankLine, final boolean repeat) throws IOException {
 
-    java.nio.file.Path splitsPath = java.nio.file.Paths.get(splitsFile);
+    java.nio.file.Path splitsPath = java.nio.file.Path.of(splitsFile);
     int insertAt = (len % 2 == 0) ? len / 2 : (len + 1) / 2;
     Collection<Text> sortedSplits = null;
     Collection<Text> randomSplits;
@@ -682,6 +744,191 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     }
   }
 
+  /**
+   * This test confirms the behaviour that when a table is created with the copy-configuration
+   * option that the properties that get set on the new table are the effective properties - that is
+   * the table properties include the system and namespace are copied into the table properties.
+   */
+  @Test
+  public void copyConfigOptionsTest() throws Exception {
+    String[] names = getUniqueNames(2);
+    String srcNS = "ns1"; // + names[0];
+
+    String srcTable = srcNS + ".src_table_" + names[1];
+    String destTable = srcNS + ".dest_table_" + names[1];
+
+    // define constants
+    final String sysPropName = "table.custom.my_sys_prop";
+    final String sysPropValue1 = "sys_value1";
+    final String sysPropValue2 = "sys_value2";
+    final String nsPropName = "table.custom.my_ns_prop";
+    final String nsPropValue1 = "ns_value1";
+    final String nsPropValue2 = "ns_value2";
+
+    ts.exec("config -s " + sysPropName + "=" + sysPropValue1);
+
+    ts.exec("createnamespace " + srcNS);
+    ts.exec("config -s " + nsPropName + "=" + nsPropValue1 + " -ns " + srcNS);
+
+    ts.exec("createtable " + srcTable);
+    ts.exec("createtable -cc " + srcTable + " " + destTable);
+
+    try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
+      Map<String,String> tids = accumuloClient.tableOperations().tableIdMap();
+
+      // used to grab values directly from ZooKeeper to bypass hierarchy
+      PropStore propStore = getCluster().getServerContext().getPropStore();
+
+      TableId destId = TableId.of(accumuloClient.tableOperations().tableIdMap().get(destTable));
+
+      // the Zk node should have all effective properties copied from configuration
+      var vp1 = propStore.get(TablePropKey.of(destId));
+      assertEquals(sysPropValue1, vp1.asMap().get(sysPropName));
+      assertEquals(nsPropValue1, vp1.asMap().get(nsPropName));
+
+      // check getTableProperties also inherits the effective config
+      Map<String,String> tableEffective =
+          accumuloClient.tableOperations().getTableProperties(destTable);
+      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
+      assertEquals(nsPropValue1, tableEffective.get(nsPropName));
+
+      // changing the system and namespace props should leave the copied effective props unchanged
+      ts.exec("config -s " + sysPropName + "=" + sysPropValue2);
+      ts.exec("config -s " + nsPropName + "=" + nsPropValue2 + " -ns " + srcNS);
+
+      // source will still inherit from sys and namespace (no prop values)
+      var vp2 = propStore.get(TablePropKey.of(TableId.of(tids.get(srcTable))));
+      assertNull(vp2.asMap().get(sysPropName));
+      assertNull(vp2.asMap().get(nsPropName));
+
+      // dest (copied props) should remain local to the table, overriding sys and namespace
+      var vp3 = propStore.get(TablePropKey.of(TableId.of(tids.get(destTable))));
+      assertEquals(sysPropValue1, vp3.asMap().get(sysPropName));
+      assertEquals(nsPropValue1, vp3.asMap().get(nsPropName));
+
+      // show change propagated in source table effective hierarchy
+      tableEffective = accumuloClient.tableOperations().getConfiguration(srcTable);
+
+      assertEquals(sysPropValue2, tableEffective.get(sysPropName));
+      assertEquals(nsPropValue2, tableEffective.get(nsPropName));
+
+      // because effective config was copied, the change should not propagate to effective hierarchy
+      tableEffective = accumuloClient.tableOperations().getConfiguration(destTable);
+      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
+      assertEquals(nsPropValue1, tableEffective.get(nsPropName));
+    }
+  }
+
+  @Test
+  public void copyTablePropsOnlyOptionsTest() throws Exception {
+    String[] names = getUniqueNames(2);
+    String srcNS = "src_ns_" + names[0];
+
+    String srcTable = srcNS + ".src_table_" + names[1];
+    String destTable = srcNS + ".dest_table_" + names[1];
+
+    // define constants
+    final String sysPropName = "table.custom.my_sys_prop";
+    final String sysPropValue1 = "sys_value1";
+    final String sysPropValue2 = "sys_value2";
+    final String nsPropName = "table.custom.my_ns_prop";
+    final String nsPropValue1 = "ns_value1";
+    final String nsPropValue2 = "ns_value2";
+
+    ts.exec("config -s " + sysPropName + "=" + sysPropValue1);
+
+    ts.exec("createnamespace " + srcNS);
+    ts.exec("config -s " + nsPropName + "=" + nsPropValue1 + " -ns " + srcNS);
+
+    ts.exec("createtable " + srcTable);
+    ts.exec("createtable --exclude-parent-properties --copy-config " + srcTable + " " + destTable,
+        true);
+
+    try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
+      Map<String,String> tids = accumuloClient.tableOperations().tableIdMap();
+
+      // only table unique values should be stored in Zk node for the table.
+      var vp1 = getCluster().getServerContext().getPropStore()
+          .get(TablePropKey.of(TableId.of(tids.get(destTable))));
+      assertNull(vp1.asMap().get(sysPropName));
+      assertNull(vp1.asMap().get(nsPropName));
+
+      // check props were inherited in effective props
+      Map<String,String> tableEffective =
+          accumuloClient.tableOperations().getConfiguration(destTable);
+      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
+      assertEquals(nsPropValue1, tableEffective.get(nsPropName));
+
+      // changing the system and namespace props should leave the effective props copied unchanged
+      ts.exec("config -s " + sysPropName + "=" + sysPropValue2);
+      ts.exec("config -s " + nsPropName + "=" + nsPropValue2 + " -ns " + srcNS);
+
+      // source will still inherit from sys and namespace (no prop values)
+      var vp2 = getCluster().getServerContext().getPropStore()
+          .get(TablePropKey.of(TableId.of(tids.get(srcTable))));
+      assertNull(vp2.asMap().get(sysPropName));
+      assertNull(vp2.asMap().get(nsPropName));
+
+      // dest (copied props) should remain local to the table, overriding sys and namespace
+      var vp3 = getCluster().getServerContext().getPropStore()
+          .get(TablePropKey.of(TableId.of(tids.get(destTable))));
+      assertNull(vp3.asMap().get(sysPropName));
+      assertNull(vp3.asMap().get(nsPropName));
+
+      // because effective config was not copied, the changes should propagate to effective
+      // hierarchy
+      tableEffective = accumuloClient.tableOperations().getConfiguration(destTable);
+      assertEquals(sysPropValue2, tableEffective.get(sysPropName));
+      assertEquals(nsPropValue2, tableEffective.get(nsPropName));
+    }
+  }
+
+  @Test
+  public void copyTablePropsInvalidOptsTest() throws Exception {
+    String[] names = getUniqueNames(2);
+
+    ts.exec("createtable " + names[0]);
+    ts.exec("createtable " + names[1]);
+
+    // test --expect-parent requires-cc expect this fail
+    ts.exec("createtable --exclude-parent " + names[0] + "dest", false);
+  }
+
+  @Test
+  public void missingSrcCopyPropsTest() throws Exception {
+    String[] names = getUniqueNames(2);
+    // test command fail if src is not available
+    ts.exec("createtable --exclude-parent -cc " + names[0] + " " + names[1], false);
+  }
+
+  @Test
+  public void missingSrcCopyConfigTest() throws Exception {
+    String[] names = getUniqueNames(2);
+    /// test command fail if src is not available
+    ts.exec("createtable -cc " + names[0] + " " + names[1], false);
+  }
+
+  @Test
+  public void destExistsTest() throws Exception {
+    String[] names = getUniqueNames(2);
+
+    ts.exec("createtable " + names[0]);
+    ts.exec("createtable " + names[1]);
+
+    // expect to fail because target already exists
+    ts.exec("createtable -cc " + names[0] + " " + names[1], false);
+  }
+
+  @Test
+  public void optionOrderingTest() throws Exception {
+    String[] names = getUniqueNames(3);
+
+    ts.exec("createtable " + names[0]);
+
+    ts.exec("createtable --exclude-parent --copy-config " + names[0] + " " + names[1], true);
+    ts.exec("createtable --copy-config " + names[0] + " --exclude-parent " + names[2], true);
+  }
+
   private Collection<Text> generateNonBinarySplits(final int numItems, final int len) {
     Set<Text> splits = new HashSet<>();
     for (int i = 0; i < numItems; i++) {
@@ -694,7 +941,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     Set<Text> splits = new HashSet<>();
     for (int i = 0; i < numItems; i++) {
       byte[] split = new byte[len];
-      random.nextBytes(split);
+      RANDOM.get().nextBytes(split);
       splits.add(new Text(split));
     }
     return splits;
